--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_background_wraper: ^1.0.1
+  printing: ^5.14.2
   provider: ^6.1.5+1
   shared_preferences: ^2.5.3
+  syncfusion_flutter_pdfviewer: ^31.2.10
   url_launcher: ^6.3.2
 
 dev_dependencies:
@@ -54,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/pdfs_files/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
