--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: nahj_asma_app
-description: "A new Flutter project."
+description: "تطبيق نهج الأسماء الحسنى - تفاعل وتدبر في أسماء الله وصفاته بأسلوب جميل وبسيط."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
