Changing the icon aap name to " النهج الاسمى لشرح اسماء الله الحسنى " .. Done

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     </queries>
 
     <application
-        android:label="nahj_asma_app"
+        android:label="النهج الأسمى اشرح اسماء الله"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
