fix: Correct application label in AndroidManifest.xml and bump version to 1.0.1+4

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     </queries>
 
     <application
-        android:label="النهج الأسمى اشرح اسماء الله"
+        android:label="النهج الأسمى لشرح اسماء الله"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
